package edu.fiuba.algo3.modelo.parcelas;

interface Construible {
    public abstract boolean puedeConstruir();
}