package edu.fiuba.algo3.modelo.parcelas;

public class Disponible implements Construible {
    public boolean puedeConstruir(){
        return true;
    }
}