package edu.fiuba.algo3.modelo.parcelas;

public class NoDisponible implements Construible{
    public boolean puedeConstruir(){
        return false;
    }
}